Bug #26986 BIT(33) for ndb is broken on solaris.
Submitted: 9 Mar 2007 4:34 Modified: 2 Apr 2007 10:57
Reporter: li zhou
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.0, 5.1 OS:Sun Solaris (solaris)
Assigned to: Bugs System Target Version:
Tags: cluster, solaris, bit column

[9 Mar 2007 4:34] li zhou
Description:
Create a ndb table with field of BIT(33) in solaris and it can't display right value.
Bit(33) is not correct but bit(63) and(64)is ok

How to repeat:
create table t1 (pk int key, a1 BIT(1), a2 BIT(5), a3 BIT(33), a4 BIT(63), a5 BIT(64))
engine ndb;

insert into t1 values
(1 ,0x1, 0x17, 0x789a, 0x789abcde, 0xfedc0001);

select pk ,hex(a1), hex(a2), hex(a3), hex(a4), hex(a5) from t1;
 +----+---------+---------+---------+----------+----------+
   pk | hex(a1) | hex(a2) | hex(a3) | hex(a4)  | hex(a5)  |
 +----+---------+---------+---------+----------+----------+
 |  1 | 1       | 17      | 0       | 789ABCDE | FEDC0001 |
 +----+---------+---------+---------+----------+----------+

a3 is not correct, should be 0x789a.

Suggested fix:
display right value for BIT(33) in solaris.
[23 Mar 2007 13:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22766

ChangeSet@1.2470, 2007-03-23 19:54:22+00:00, lzhou@dev3-63.(none) +2 -0
  BUG#26986 Correct insert and select operation of BIT(33) on solaris.
[26 Mar 2007 14:35] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22935

ChangeSet@1.2418, 2007-03-26 14:48:52+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #26986  	BIT(33) for ndb is broken on solaris.
  - always store lsw first in ndb
[30 Mar 2007 10:53] Bugs System
Pushed into 5.0.40
[2 Apr 2007 10:57] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.0.40 and 5.1.18 changelogs.