Bug #26986  	BIT(33) for ndb is broken on solaris. - always store lsw first in ndb